--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -419,6 +419,8 @@ optgroup {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 td,
